--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,10 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.github.dcendents.android-maven'
-
-group='com.github.jitpack'
-version '1.0.0'
 
 android {
     compileSdkVersion 28
@@ -31,5 +27,6 @@ dependencies {
     implementation 'com.balysv.materialmenu:material-menu:2.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.11.0'
-    implementation project(':utils')
+//    implementation 'com.github.andob:DobDroidMiscUtils:v1.0.0'
+    implementation project(":utils")
 }
