--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.jitpack'
+version 'v1.0.0'
 
 android {
     compileSdkVersion 28
@@ -7,7 +11,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName "v1.0.0"
     }
     buildTypes {
         release {
