--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -20,12 +20,13 @@ android {
 }
 
 dependencies {
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.balysv.materialmenu:material-menu:2.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.11.0'
-    implementation 'com.github.andob:DobDroidMiscUtils:v1.0.3'
+//    implementation 'com.github.andob:DobDroidMiscUtils:v1.0.3'
+    implementation project(":utils")
 }
