--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     implementation 'com.balysv.materialmenu:material-menu:2.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.11.0'
-    implementation 'com.github.andob:DobDroidMiscUtils:v1.0.7'
+//    implementation 'com.github.andob:DobDroidMiscUtils:v1.0.7'
+    implementation project(":utils")
 }
