--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
     implementation 'com.balysv.materialmenu:material-menu:2.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+    implementation 'net.danlew:android.joda:2.10.1.2'
 }
