--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -37,4 +37,8 @@ dependencies {
     implementation 'com.balysv.materialmenu:material-menu:2.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation 'net.danlew:android.joda:2.10.1.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation ('com.github.debop:koda-time:2.0.0') {
+        exclude group: 'joda-time'
+    }
 }
